# Optiguide-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
optiguide_mcp/: __init__.py
optiguide_mcp/tools/: __init__.py  mip_formulation.py  mip_resolve.py  util.py  what_if_analysis.py
src/optiguide_mcp/: __init__.py  __main__.py  mcp_server.py
src/optiguide_mcp/tools/: __init__.py  mip_resolve.py  mip_solve.py  util.py  what_if_analysis.py
test/: test_solver.py
