[project]
name = "optiguide-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[cli]>=2.11.0",
    "highspy>=1.11.0",
    "pyomo>=6.9.2",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
optiguide-mcp = "optiguide_mcp:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
